--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1301,9 +1301,13 @@
   .service-main-wrapper {
     width: 65%;
     padding-right: 40px;
+    width: 63px;
+    flex: 0 0 63%
   }
   .service-acide-wrapper {
     padding-left: 40px;
+    width: 37px;
+    flex: 0 0 37%;
     .service-content-price {
       margin-bottom: 80px;
     }
